# qidao

./: .gitignore  AGENTS.md  README.md  TODO.md  build_core.sh  exportOptions.plist  init-spec.md
.github/workflows/: release.yml
QiDao/QiDao/: BoardTheme.swift  BoardView.swift  BoardViewModel.swift  CenterView.swift  ContentView.swift  EngineConfig.swift  EngineConfigView.swift  GameBoardView.swift  GameInfoEditorView.swift  Info.plist  LeftSidebarView.swift  Localization.swift  MainBoardView.swift  QiDaoApp.swift  RightSidebarView.swift  SoundManager.swift  VariationTreeView.swift  WinRateConverter.swift
QiDao/QiDao.xcodeproj/: project.pbxproj
QiDao/QiDao.xcodeproj/project.xcworkspace/xcuserdata/neo.xcuserdatad/: UserInterfaceState.xcuserstate
QiDao/QiDao.xcodeproj/xcuserdata/neo.xcuserdatad/xcschemes/: xcschememanagement.plist
QiDao/QiDao/Assets.xcassets/AppIcon.appiconset/: Contents.json
QiDao/QiDao/Core/: qidao_core.swift
QiDao/QiDao/Core/qidao_coreFFI/: module.modulemap  qidao_coreFFI.h
QiDao/QiDao/en.lproj/: Localizable.strings
QiDao/QiDao/zh-Hans.lproj/: Localizable.strings
assets/games/: 1.sgf  2.sgf  3.sgf  4.sgf  test.sgf
games/: 1.sgf
qidao-core/: Cargo.toml
qidao-core/src/: lib.rs
qidao-core/src/engine/: analysis.rs  gtp.rs  mod.rs
tools/: generate_icon.py  pyproject.toml
